# CmakeTest

./: CMakeLists.txt  CMakeLists_all.txt  build.sh  main.cpp  readme.txt
android-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main
android-build/src/: Makefile  cmake_install.cmake
android-build/src/cir/: Makefile  cmake_install.cmake
android-build/src/img/: Makefile  cmake_install.cmake
android-build/src/select/: Makefile  cmake_install.cmake
sep_build/: CMakeCache.txt  Makefile  cmake_install.cmake
sep_build/src/: Makefile  cmake_install.cmake
sep_build/src/cir/: Makefile
sep_build/src/img/: Makefile  cmake_install.cmake
sep_build/src/select/: Makefile
src/: CMakeLists.txt
src/cir/: CMakeLists.txt  Circle.cpp  Circle.h
src/img/: CMakeLists.txt  img.cpp  img.h
src/select/: CMakeLists.txt  select.cpp  select.h
