PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ADD_SUBDIRECTORY(src)
MESSAGE(STATUS:"cmake src")
SET(CMAKE_BUILD_TYPE DEBUG)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/img)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/cir)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/select)

LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/img)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/cir)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/select)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_DEFINITIONS(-D_DEBUG)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "./bin")
ADD_EXECUTABLE(main ${DIR_SRCS} )
TARGET_LINK_LIBRARIES(main ${OpenCV_LIBS} Img Circle Select)
MESSAGE(STATUS:"build finished")
ADD_TEST(mytest ${PROJECT_BINARY_DIR}/bin/main)
ENABLE_TESTING()
